# OOP2025

./: Pregatire sesiune ACSO.cpp  README.md  fila.cpp  incercare2.cpp  main.cpp
Lab 1/Problema 1/: in.txt  main.cpp
Lab 1/Problema 2/: main.cpp
Lab 1/Problema 3/: main3.cpp
Lab 2/Problema 1/: NumberList.cpp  main.cpp
Lab 2/Problema 2/: functions.cpp  functions.h  main.cpp  student.cpp  student.h
Lab 3/problema 1/: Math.cpp  Math.h  main.cpp
Lab 3/problema 2/: Canvas.cpp  Canvas.h  main.cpp
Lab 4/: Sort.cpp  Sort.h  main.cpp
Lab 5/: Number.cpp  Number.h  main.cpp
Lab 6/: BMW.cpp  BMW.h  Car.h  Circuit.cpp  Circuit.h  Fiat.cpp  Fiat.h  RangeRover.cpp  RangeRover.h  Seat.cpp  Seat.h  Volvo.cpp  Volvo.h  Weather.h  main.cpp
Lab 7/Prob 1/: main.cpp
Lab 8/: main.cpp
Lab 9/: main.cpp  mapa.h
Lab10/: main.cpp
Lab11/: CMakeLists.txt  Sort.h  main.cpp  main_test.cpp
